--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: android_classa
+name: flutter_classb
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   transition: ^2.0.2
-  google_fonts:
+  google_fonts: ^5.0.0
   fluttertoast: ^8.2.2
 
 
@@ -21,7 +21,11 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+
 flutter:
   uses-material-design: true
+
   assets:
     - assets/
+    - assets/logo/
